@@ -137,6 +137,10 @@ C-API
 Library
 -------
 
+- Issue #5027: The standard ``xml`` namespace is now understood by
+  xml.sax.saxutils.XMLGenerator as being bound to
+  http://www.w3.org/XML/1998/namespace.  Patch by Troy J. Farrell.
+
 - #7761: telnetlib.interact failures on Windows fixed.
 
 - Issue #5117: Case normalization was needed on ntpath.relpath(). And
